--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
     <!-- Header start -->
     <header>
+        <nav class="nav">
+            <h2 class="nav-title">G3 Architects</h2>
+            <ul class="nav-menu">
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
         <section class="banner">
             <div class="banner-content">
                 <h2 class="banner-title">Brand New<br>
@@ -25,12 +34,102 @@
     <!-- Header end -->
     <!-- Main Start -->
     <main>
-
+        <section class="features">
+            <div class="feature-container">
+                <div class="feature-img">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="feature-content">
+                    <h2 class="feature-title"><span class="c-03">Quick List </span><span class="c-01">of Our </span><span class="c-o">Features</span></h2>
+                    <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore Now</button>
+                </div>
+            </div>
+        </section>
+        <section class="love">
+            <div class="love-container">
+                <div class="love-contetnt">
+                    <h2 class="love-title">Features you will love & enjoy</h2>
+                    <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="love-subsection">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+                    </div>
+                    <div class="love-subsection">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+                    </div>
+                    <div class="love-subsection">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+                    </div>
+                    <div class="love-subsection">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
+                    </div>
+                </div>
+                <div class="love-image">
+                    <img src="images/architect.png" alt="">
+                    
+                </div>
+            </div>
+            <div class="experience">
+                <h2 class="experience-title">10+ Years</h2>
+                <p class="experience-subtitle">Experience</p>
+            </div>
+        </section>
+        <section class="facts">
+            <h2 class="facts-title">Some Facts</h2>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, but<br>the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="" class="fact-img">
+                    <h2 class="fact-count">54</h2>
+                    <p class="fact-name">Award Winning</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/projects.png" alt="" class="fact-img">
+                    <h2 class="fact-count">1458</h2>
+                    <p class="fact-name">Project Finished</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/customers.png" alt="" class="fact-img">
+                    <h2 class="fact-count">590</h2>
+                    <p class="fact-name">Clients Worked</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="" class="fact-img">
+                    <h2 class="fact-count">22578</h2>
+                    <p class="fact-name">Email Sent</p>
+                </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <h2 class="sponsors-title">Our Sponsors</h2>
+            <p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsor-container">
+                <img src="images/sponsors/amazon.png" alt="" class="sponsor">
+                <img src="images/sponsors/figma.png" alt="" class="sponsor">
+                <img src="images/sponsors/google.png" alt="" class="sponsor">
+                <img src="images/sponsors/spotify.png" alt="" class="sponsor">
+                <img src="images/sponsors/telerama.png" alt="" class="sponsor">
+            </div>
+        </section>
+        <section class="signup">
+            <h2 class="signup-title">Keep Connected</h2>
+            <form action="" class="signup-form">
+                <input type="email" name="" id="email" placeholder="Your Email">
+                <input type="submit" value="Sign Up" class="btn-primary">
+            </form>
+        </section>
     </main>
     <!-- Main End -->
     <!-- Footer Start -->
     <footer>
-
+        <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
     <!-- Footer End -->
 </body>
